Checking in the new swagger defintions files
Checking in the new swagger defintions files
