# api/swagger_server/models/login_details.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class LoginDetails(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, name: str=None, password: str=None):  # noqa: E501
+        """LoginDetails - a model defined in Swagger
+
+        :param name: The name of this LoginDetails.  # noqa: E501
+        :type name: str
+        :param password: The password of this LoginDetails.  # noqa: E501
+        :type password: str
+        """
+        self.swagger_types = {
+            'name': str,
+            'password': str
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'password': 'password'
+        }
+
+        self._name = name
+        self._password = password
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'LoginDetails':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Login_details of this LoginDetails.  # noqa: E501
+        :rtype: LoginDetails
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this LoginDetails.
+
+
+        :return: The name of this LoginDetails.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this LoginDetails.
+
+
+        :param name: The name of this LoginDetails.
+        :type name: str
+        """
+        if name is None:
+            raise ValueError("Invalid value for `name`, must not be `None`")  # noqa: E501
+
+        self._name = name
+
+    @property
+    def password(self) -> str:
+        """Gets the password of this LoginDetails.
+
+
+        :return: The password of this LoginDetails.
+        :rtype: str
+        """
+        return self._password
+
+    @password.setter
+    def password(self, password: str):
+        """Sets the password of this LoginDetails.
+
+
+        :param password: The password of this LoginDetails.
+        :type password: str
+        """
+
+        self._password = password
