# api/swagger_server/swagger/swagger.yaml
@@ -115,6 +115,37 @@ paths:
           schema:
             $ref: "#/definitions/Info"
       x-swagger-router-controller: "swagger_server.controllers.event_controller"
+  /event/{eventid}/teams:
+    get:
+      tags:
+      - "event"
+      summary: "Get teams by id"
+      description: "Get teams by id"
+      operationId: "get_teams_by_eveid"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "eventid"
+        in: "path"
+        description: "ID of the event to fetch"
+        required: true
+        type: "integer"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Teams"
+        "400":
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/Info"
+        "500":
+          description: "Server Error"
+          schema:
+            $ref: "#/definitions/Info"
+      x-swagger-router-controller: "swagger_server.controllers.event_controller"
   /event/subscribed/{user_id}:
     get:
       tags:
@@ -1224,7 +1255,7 @@ paths:
             $ref: "#/definitions/Info"
       x-swagger-router-controller: "swagger_server.controllers.user_controller"
   /user/login:
-    get:
+    post:
       tags:
       - "user"
       summary: "Logs user into the system"
@@ -1233,53 +1264,42 @@ paths:
       produces:
       - "application/json"
       parameters:
-      - name: "username"
-        in: "query"
-        description: "The user name for login"
+      - in: "body"
+        name: "body"
+        description: "Username and password"
         required: true
-        type: "string"
-      - name: "password"
-        in: "query"
-        description: "The password for login in clear text"
-        required: true
-        type: "string"
+        schema:
+          $ref: "#/definitions/Login_details"
       responses:
         "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/User"
+          description: "Successfully logged in"
         "400":
           description: "Bad Request"
-          schema:
-            $ref: "#/definitions/Info"
         "500":
           description: "Server Error"
-          schema:
-            $ref: "#/definitions/Info"
       x-swagger-router-controller: "swagger_server.controllers.user_controller"
-  /user/logout:
-    get:
+  /user/logout/{userid}:
+    post:
       tags:
       - "user"
-      summary: "Logs out current logged in user session"
+      summary: "Logs user into the system"
       description: ""
       operationId: "logout_user"
       produces:
       - "application/json"
-      parameters: []
+      parameters:
+      - name: "userid"
+        in: "path"
+        description: "Username that needs to be logged out."
+        required: true
+        type: "integer"
       responses:
         "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/Info"
+          description: "Successfully user logged out"
         "400":
           description: "Bad Request"
-          schema:
-            $ref: "#/definitions/Info"
         "500":
           description: "Server Error"
-          schema:
-            $ref: "#/definitions/Info"
       x-swagger-router-controller: "swagger_server.controllers.user_controller"
   /user/{userid}:
     get:
@@ -1377,6 +1397,18 @@ definitions:
     type: "array"
     items:
       $ref: "#/definitions/Event"
+  Login_details:
+    type: "object"
+    required:
+    - "name"
+    properties:
+      name:
+        type: "string"
+      password:
+        type: "string"
+    example:
+      username: "username"
+      password: "password"
   Event:
     type: "object"
     required:
